# engine-cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json
engine/: CMakeLists.txt
engine/shaders/: shader.frag  shader.vert
engine/src/: defines.hpp  export.h  helpers.hpp  utils.cpp  utils.hpp
engine/src/application/: application.cpp  application.hpp  window.cpp  window.hpp
engine/src/core/: app.hpp  logging.cpp  logging.hpp  test.hpp
engine/src/core/context/: context.cpp  context.hpp
engine/src/core/math/: float2.hpp  float3.hpp  float4.hpp  float4x4.hpp  float4x4.inl  float_quat.hpp  float_quat.inl  math.cpp  math.hpp  matrix4x4.hpp  matrix4x4.inl  quat.hpp  simd.hpp  vector3.hpp  vector3.inl  vector4.hpp  vector4.inl
engine/src/core/memory/: allocation.cpp  allocation.hpp  memory.hpp
engine/src/core/memory/allocators/: arena_allocator.cpp  arena_allocator.hpp  heap_allocator.cpp  heap_allocator.hpp  temporal_allocator.hpp
engine/src/core/scheduler/: dependency_graph.hpp  phase.hpp  pipeline.hpp  scheduler.cpp  scheduler.hpp  system.hpp
engine/src/ecs/: archetype.cpp  archetype.hpp  component_record.cpp  component_record.hpp  ecs.hpp  ecs_types.hpp  entity.cpp  entity.hpp  entity_index.cpp  entity_index.hpp  world.cpp  world.hpp
engine/src/ecs/utils/: bloom_filter.hpp
engine/src/platform/: platform.hpp  platformlinux.cpp  platformw64.cpp
engine/src/render/: backend.hpp
engine/src/render/backends/: vulkan-new.cpp  vulkan.cpp  vulkan.hpp
engine/src/templates/: dynamic_array.hpp  hashmap-old.hpp  hashmap.hpp  hybrid_hashmap.hpp  sparse_list.hpp
src/: helpers.hpp
src/ecs/: ecs.cpp
src/ecs/lib/: archetype.cpp  archetype.hpp  component_record.cpp  component_record.hpp  entity.hpp  entity_index.cpp  entity_index.hpp  types.hpp  world.hpp
src/ecs/lib/utils/: bloom_filter.cpp  bloom_filter.hpp  sparse_list.hpp
src/utils/: temporal_allocator.cpp
standalone/: CMakeLists.txt
standalone/src/: main.cpp
